apps/web-curricanvas/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: web-curricanvas
  namespace: ndmastery
  labels:
    app.kubernetes.io/name: web-curricanvas
    app.kubernetes.io/part-of: ndmastery
    app.kubernetes.io/managed-by: argo-rollouts
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`curricanvas.com`)
      kind: Rule
      services:
        - name: web-curricanvas-wrr
          kind: TraefikService
      middlewares:
        - name: ndmastery-secure-headers
        - name: ndmastery-compress
  tls:
    secretName: web-curricanvas-tls
    options:
      name: ndmastery-modern-tls
      namespace: ndmastery
